--- a/cookbook/src/Styles/less/home.less
+++ b/cookbook/src/Styles/less/home.less
@@ -1,6 +1,7 @@
 .home-container {
   .container-margin-top();
-  width: 1100px;
+  width: 100%;
+  max-width: 1400px;
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
